--- a/service-groove/pom.xml
+++ b/service-groove/pom.xml
@@ -31,6 +31,11 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <version>1.6.1</version>
+            </plugin>
         </plugins>
     </build>
 
