--- a/model-groove/pom.xml
+++ b/model-groove/pom.xml
@@ -10,6 +10,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>common-groovy</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <artifactId>model-groove</artifactId>
 
